[project]
name = "sentinellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "datasets>=4.4.1",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "pyarrow>=22.0.0",
    "ray[serve]>=2.52.0",
    "requests>=2.32.5",
    "trl>=0.25.1",
    "uvloop>=0.22.1",
    "vllm>=0.11.2",
]
